# Sentinel

./: .env.example  .gitignore  Dockerfile  README.md  config.example.yaml  docker-compose.yml  pyproject.toml
dashboard/: README.md
dashboard/app/: SentinelPanels.jsx
dashboard/app/api/sentinel/: _agent.js
dashboard/app/api/sentinel/audit/: route.js
dashboard/app/api/sentinel/deploy/: route.js
dashboard/app/api/sentinel/deploys/: route.js
dashboard/app/api/sentinel/infra/: route.js
plugin/: .mcp.json
plugin/.claude-plugin/: plugin.json
sentinel/: __init__.py  agent.py  audit.py  classify.py  cli.py  config.py  mcp_server.py  models.py  safety.py  ssh.py  tools.py
sentinel/providers/: __init__.py  docker_host.py  opnsense.py  proxmox.py
site/: index.html
tests/: conftest.py  test_misc.py  test_opnsense.py  test_safety.py  test_tools.py
