[project]
name = "sentinel-homelab"
version = "0.1.0"
description = "Claude-driven homelab orchestration: Proxmox, OPNsense, and Docker from one sentence. MCP server + Agent SDK app + dashboard."
readme = "README.md"
requires-python = ">=3.11,<3.15"
license = { text = "MIT" }
authors = [{ name = "Aryan Singh" }]
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    "paramiko>=3.4",
    "httpx>=0.27",
    "proxmoxer>=2.0",
    "requests>=2.31",
    "anthropic>=0.40",
    "claude-agent-sdk>=0.1.0",
    "mcp>=1.2",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[project.scripts]
sentinel = "sentinel.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sentinel"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
